Alguns tweaks de aparência, favicon etc.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Caprasimo&family=Comic+Neue:ital,wght@1,700&family=Outfit:wght@400;700&display=swap");
 
 :root {
-    --black: #000000;
-    --white: #f8f8f8;
-    --cyan: #06999a;
-    --pink: #9a0699;
-    --yellow: #999a06;
+  --black: #000000;
+  --white: #f8f8f8;
+  --cyan: #06999a;
+  --pink: #9a0699;
+  --yellow: #999a06;
 }
 
 * {
@@ -14,48 +14,71 @@
 }
 
 body {
-    font-family: "Outfit", sans-serif;
-    color: var(--white);
-    background-color: #16161d;
+  font-family: "Outfit", sans-serif;
+  color: var(--white);
+  background-color: #16161d;
+}
+
+#animated-dots {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 200%;
+  animation: move-dots 30s linear infinite;
+  z-index: -1;
+}
+
+@keyframes move-dots {
+  0% {
+    transform: translate(-10%, -10%);
+  }
+
+  100% {
+    transform: translate(10%, 10%);
+  }
 }
 
 i {
-    font-family: "Comic Neue", monospace;
-    font-style: italic;
+  font-family: "Comic Neue", monospace;
+  font-style: italic;
 }
 
 #face-page {
-    height: 100vh;
-    background-color: #16161d;
-    padding: 0 15%;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  height: 100vh;
+  padding: 0 15%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 h1 {
-    font-family: "Caprasimo", serif;
-    font-weight: bold;
-    font-size: 4rem;
-    
-    text-shadow: 
-        1px 1px 2px var(--cyan),
-        0 0 10px var(--pink),
-        0 0 5px var(--yellow);
+  font-family: "Caprasimo", serif;
+  font-weight: bold;
+  font-size: 4rem;
+
+  text-shadow:
+    1px 1px 2px var(--cyan),
+    0 0 10px var(--pink),
+    0 0 5px var(--yellow);
 }
 
 section {
   margin: 2rem 15%;
-  padding: 0.75rem 1rem;
- 
-  border: 2px solid var(--white);
+  padding: 1.5rem;
+
+  border: 3px solid var(--white);
   border-radius: 20px;
+
+  box-shadow: 0 0 10px var(--black);
 }
 
 h2 {
   font-size: 1.75rem;
+
+  margin-bottom: 0.75rem;
 }
 
 p {
