--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Caprasimo&family=Comic+Neue:ital,wght@1,700&family=Outfit:wght@400;700&display=swap");
 
 :root {
+  --background: #16161d;
   --black: #000000;
   --white: #f8f8f8;
   --cyan: #06999a;
@@ -15,33 +16,40 @@
 
 body {
   font-family: "Outfit", sans-serif;
+  font-size: 1.5rem;
   color: var(--white);
-  background-color: #16161d;
+  background-color: var(--background);
 }
 
-#animated-dots {
+#grid-background {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 200%;
-  height: 200%;
-  animation: move-dots 15s linear infinite;
+
+  width: 100%;
+  height: 100%;
   z-index: -1;
-}
 
-@keyframes move-dots {
-  0% {
-    transform: translate(-12%, -12%);
-  }
-
-  100% {
-    transform: translate(1%, 1%);
-  }
+  /* A imagem em si. */
+  background-color: var(--background);
+  opacity: 0.05;
+  background-image:
+    linear-gradient(var(--yellow) 1px, transparent 1px),
+    linear-gradient(to right, var(--yellow) 1px, var(--background) 1px);
+  background-position: center;
+  background-size: 20px 20px;
 }
 
 i {
   font-family: "Comic Neue", monospace;
   font-style: italic;
+
+  font-size: 1.6rem;
+}
+
+em {
+  font-style: normal;
+
+  color: var(--black);
+  background-color: var(--white);
 }
 
 #face-page {
@@ -58,11 +66,11 @@ h1 {
   font-family: "Caprasimo", serif;
   font-weight: bold;
   font-size: 4rem;
+  letter-spacing: 1px;
 
-  text-shadow:
-    1px 1px 2px var(--cyan),
-    0 0 10px var(--pink),
-    0 0 5px var(--yellow);
+  text-align: center;
+  text-wrap: balance;
+  text-shadow: 4px -4px 0px var(--cyan), -4px 4px 0px var(--pink);
 }
 
 section {
@@ -71,24 +79,28 @@ section {
 
   border: 4px solid var(--white);
   border-radius: 20px;
+  outline: 4px solid var(--black);
 
-  box-shadow: 0 0 10px var(--black);
+  box-shadow: 8px 8px 0px var(--black);
 }
 
 h2 {
   font-size: 1.75rem;
+  text-transform: uppercase;
 
-  margin-bottom: 0.75rem;
-}
-
-p {
-  font-size: 1.5rem;
-
-  text-align: justify;
+  margin-bottom: 1rem;
 }
 
 a {
   color: inherit;
+  font-weight: bold;
+  text-decoration-thickness: 1.5px;
+  text-decoration-skip-ink: none;
+}
+
+a:hover,
+a:focus {
+  text-decoration-style: wavy;
 }
 
 footer {
